created other html

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>About</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -23,17 +23,10 @@
         </div>
     </header>
 
-    <section class="showcase">
-        <div class="container">
-            <h1>Welcome to My Professional Site</h1>
-            <p>Your one-stop solution for professional services</p>
-        </div>
-    </section>
-
     <section class="content">
         <div class="container">
-            <h2>Introduction</h2>
-            <p>Hello! My name is [Your Name], and I am a [Your Profession]. Welcome to my professional site where you can find information about my services, portfolio, and how to get in touch with me. Feel free to explore and learn more about what I can offer.</p>
+            <h2>About Me</h2>
+            <p>[Your personal information you want to share with possible employers]</p>
         </div>
     </section>
 </body>
