--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -23,17 +23,15 @@
         </div>
     </header>
 
-    <section class="showcase">
-        <div class="container">
-            <h1>Welcome to My Professional Site</h1>
-            <p>Your one-stop solution for professional services</p>
-        </div>
-    </section>
-
     <section class="content">
         <div class="container">
-            <h2>Introduction</h2>
-            <p>Hello! My name is [Your Name], and I am a [Your Profession]. Welcome to my professional site where you can find information about my services, portfolio, and how to get in touch with me. Feel free to explore and learn more about what I can offer.</p>
+            <h2>Projects</h2>
+            <ul>
+                <li>Project 1: [Description of project 1]</li>
+                <li>Project 2: [Description of project 2]</li>
+                <li>Project 3: [Description of project 3]</li>
+                <li>GitHub Repos: <a href="[Your GitHub URL]">[Your GitHub URL]</a></li>
+            </ul>
         </div>
     </section>
 </body>
