--- a/index.html
+++ b/index.html
@@ -8,19 +8,15 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <div id="branding">
-                <h1>My Professional Site</h1>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="skills.html">Skill Sets</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav class="navbar">
+            <div class="navbar-brand">MyWebsite</div>
+            <ul class="navbar-nav">
+                <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
+                <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <section class="showcase">
