finished index / home page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <nav class="navbar">
                 <div id="branding">
-                    <h1>My Professional Site</h1>
+                    <h1>Professional Site - Emma McNeese</h1>
                 </div>
                 <ul class="navbar-nav">
                     <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
@@ -23,18 +23,22 @@
         </div>
     </header>
 
-    <section class="showcase">
+    <section class="headshot">
         <div class="container">
-            <h1>Welcome to My Professional Site</h1>
-            <p>Your one-stop solution for professional services</p>
+            <div class="headshot-content">
+                <img src="C:\Users\mcnee\OneDrive - University of Oklahoma\Miscellaneous\Headshot.JPG" alt="Professional Headshot" class="headshot-img">
+                <div class="intro-text">
+                    <h2>Welcome to My Portfolio</h2>
+                    <p>
+                        Hello! My name is Emma McNeese, and as a senior majoring in Management Information Systems with a Nonprofit Organizational Studies minor 
+                        at the University of Oklahoma, I am dedicated to leveraging my diverse skill set to drive impactful change within the business sector.
+                    </p>
+                    <p>On this site, you will find more information about me, various projects I've worked on, and my different skills.</p>
+                    <p>Thank you for visiting!</p>
+                </div>
+            </div>
         </div>
     </section>
 
-    <section class="content">
-        <div class="container">
-            <h2>Introduction</h2>
-            <p>Hello! My name is [Your Name], and I am a [Your Profession]. Welcome to my professional site where you can find information about my services, portfolio, and how to get in touch with me. Feel free to explore and learn more about what I can offer.</p>
-        </div>
-    </section>
 </body>
 </html>
