--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="headshot">
         <div class="container">
             <div class="headshot-content">
-                <img src="C:\Users\mcnee\OneDrive - University of Oklahoma\Miscellaneous\Headshot.JPG" alt="Professional Headshot" class="headshot-img">
+                <img src="Headshot.JPG" alt="Professional Headshot" class="headshot-img">
                 <div class="intro-text">
                     <h2>Welcome to My Portfolio</h2>
                     <p>
