worked on about section

--- a/about.html
+++ b/about.html
@@ -8,26 +8,42 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <div id="branding">
-                <h1>My Professional Site</h1>
+            <div class="container">
+                <nav class="navbar">
+                    <div id="branding">
+                        <h1>Professional Site - Emma McNeese</h1>
+                    </div>
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+                        <li class="nav-item"><a href="projects.html" class="nav-link">Projects</a></li>
+                        <li class="nav-item"><a href="skills.html" class="nav-link">Skills</a></li>
+                    </ul>
+                </nav>
             </div>
-            <nav>
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-                    <li class="nav-item"><a href="projects.html" class="nav-link">Projects</a></li>
-                    <li class="nav-item"><a href="skills.html" class="nav-link">Skills</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+        </header>
 
-    <section class="content">
-        <div class="container">
-            <h2>About Me</h2>
-            <p>[Your personal information you want to share with possible employers]</p>
-        </div>
-    </section>
+        <section class="content">
+            <div class="container">
+                <h2>About Me</h2>
+                
+                <p>
+                    With a strong foundation in data analytics and business communication skills developed through my MIS major,
+                    complemented by proficient Java programming knowledge acquired during a semester in computer science,
+                    I am well-equipped to tackle complex challenges in today's digital sphere.
+                </p>
+                <p>
+                    Through my leadership roles in Kappa Alpha Theta, I've further developed communication and leadership skills. 
+                    These skills enable me to effectively collaborate with all types of people, each with unique strengths, 
+                    to achieve common goals. I proudly served on the executive data committee with OU Dance Marathon, where we raise funds for 
+                    Oklahoma Children's Hospital, further deepening my ability to serve with a team striving to make a difference.
+                </p>
+                <p>
+                    During an internship at Not Your Average Joe coffee shop, I gained hands-on experience in grant writing, 
+                    donation management, marketing, interpersonal communication, and systems improvement. This experience solidified my desire to 
+                    utilize my background and expertise to contribute meaningfully to businesses and organizations.
+                </p>
+            </div>
+        </section>
 </body>
 </html>
