--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         Hello! My name is Emma McNeese, and as a senior majoring in Management Information Systems with a Nonprofit Organizational Studies minor 
                         at the University of Oklahoma, I am dedicated to leveraging my diverse skill set to drive impactful change within the business sector.
                     </p>
-                    <p>On this site, you will find more information about me, various projects I've worked on, and my different skills.</p>
+                    <p>On this site I developed, you will find more information about me, various projects I've worked on, and my different skills.</p>
                     <p>Thank you for visiting!</p>
                 </div>
             </div>
