--- a/projects.html
+++ b/projects.html
@@ -9,10 +9,10 @@
 <body>
     <header>
         <div class="container">
-            <div id="branding">
-                <h1>My Professional Site</h1>
-            </div>
-            <nav>
+            <nav class="navbar">
+                <div id="branding">
+                    <h1>Professional Site - Emma McNeese</h1>
+                </div>
                 <ul class="navbar-nav">
                     <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
                     <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
@@ -27,10 +27,10 @@
         <div class="container">
             <h2>Projects</h2>
             <ul>
-                <li>Project 1: [Description of project 1]</li>
-                <li>Project 2: [Description of project 2]</li>
-                <li>Project 3: [Description of project 3]</li>
-                <li>GitHub Repos: <a href="[Your GitHub URL]">[Your GitHub URL]</a></li>
+                <li>Williams Intern on Maximo Developers Team (Project 1): Created automation tool using PowerShell and Batch to improve maintenance processes and increase efficiency</li>
+                <li>Williams Intern on Maximo Developers Team (Project 2): Conducted database-focused testing in Oracle using SQL to progress toward quick, reliable testing for Maximo</li>
+                <li>Williams Inter on Maximo Developers Team (Project 3): Mini projects included Oracle procedures creations, password updates through EAR rebuilds, and data archives</li>
+                <li>GitHub Repos: <a href="mcneese-emma.github.io">mcneese-emma.github.io</a></li>
             </ul>
         </div>
     </section>
