did skills.html

--- a/about.html
+++ b/about.html
@@ -44,6 +44,9 @@
                         donation management, marketing, interpersonal communication, and systems improvement. This experience solidified my desire to
                         utilize my background and expertise to contribute meaningfully to businesses and organizations.
                     </p>
+                    <p>
+                        <a href="www.linkedin.com/in/emma-mcneese">LinkedIn</a>
+                    </p>
                 </div>
             </div>
 
