--- a/skills.html
+++ b/skills.html
@@ -9,10 +9,10 @@
 <body>
     <header>
         <div class="container">
-            <div id="branding">
-                <h1>My Professional Site</h1>
-            </div>
-            <nav>
+            <nav class="navbar">
+                <div id="branding">
+                    <h1>Professional Site - Emma McNeese</h1>
+                </div>
                 <ul class="navbar-nav">
                     <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
                     <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
@@ -24,15 +24,19 @@
     </header>
 
     <section class="content">
-        <div class="container">
-            <h2>Skill Sets</h2>
-            <ul>
-                <li>C#</li>
-                <li>SQL</li>
-                <li>Python</li>
-                <li>[Other skills/certifications]</li>
-            </ul>
+        <div class="box">
+            <div class="container">
+                <h2>Skill Sets</h2>
+                <ul>
+                    <li>C#</li>
+                    <li>SQL</li>
+                    <li>Powershell</li>
+                    <li>Java</li>
+                    <li>Microsoft Power Automate</li>
+                </ul>
+            </div>
         </div>
+       
     </section>
 </body>
 </html>
