--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,8 @@
                 <ul>
                     <li><h3>Williams Intern on Maximo Developers Team (Project 1):</h3> Created automation tool using PowerShell and Batch to improve maintenance processes and increase efficiency</li>
                     <li><h3>Williams Intern on Maximo Developers Team (Project 2):</h3> Conducted database-focused testing in Oracle using SQL to progress toward quick, reliable testing for Maximo</li>
-                    <li><h3>Williams Inter on Maximo Developers Team (Project 3):</h3> Mini projects included Oracle procedures creations, password updates through EAR rebuilds, and data archives</li>
+                    <li><h3>Williams Intern on Maximo Developers Team (Project 3):</h3> Mini projects included Oracle procedures creations, password updates through EAR rebuilds, and data archives</li>
+                    <li><h3>University of Oklahoma (Project 4):</h3> Created a Microsoft Power Automation solution to increase efficiency and streamline responses for university professors with their high-volume inboxes</li>
                     <li><h3>GitHub Repos:</h3> <a href="mcneese-emma.github.io">mcneese-emma.github.io</a></li>
                 </ul>
             </div>
