--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                         utilize my background and expertise to contribute meaningfully to businesses and organizations.
                     </p>
                     <p>
-                        <a href="www.linkedin.com/in/emma-mcneese">LinkedIn</a>
+                        <a href="http://www.linkedin.com/in/emma-mcneese">LinkedIn</a>
                     </p>
                 </div>
             </div>
